--- a/manifest.json
+++ b/manifest.json
@@ -1,28 +1,28 @@
 {
-    
-      "manifest_version": 3,
-      "name": "youtube unsubscribe all",
-      "description": "the best and easy way to unsubscribe all youtube subscribed channel",
-      "version": "1.0",
-      "permissions": [
-        "activeTab",
-        "storage"
-      ],
-      "background":{
-        "service_worker":"background.js"
-      },
-      "content_scripts": [
-        {
-          "matches": ["https://www.youtube.com/*"],
-          "run_at": "document_end",
-
-          "js": ["content_script.js"]
-        }
-      ],
-      "action": {
-        "default_popup": "index.html",
-        "default_icon": "assets/icon128.png",
-        "default_title": "youtube unsubscribe all"
-      }
-    }
-    
+  "manifest_version": 3,
+  "name": "YouTube Auto Unsubscribe Free",
+  "version": "1.0",
+  "description": "Automate the process of unsubscribing from YouTube channels without manyally clicking the unsubscribe button.",
+  "action": {
+    "default_popup": "index.html",
+    "default_icon": "assets/icon48.png"
+  },
+  "permissions": [
+    "tabs",
+    "webNavigation",
+    "scripting"
+  ],
+  "host_permissions": [
+    "https://www.youtube.com/*"
+  ],
+  "background": {
+    "service_worker": "background.js"
+  },
+  "icons": {
+    "16": "assets/icon16.png",
+    "32": "assets/icon32.png",
+    "48": "assets/icon48.png",
+    "96": "assets/icon96.png",
+    "128": "assets/icon128.png"
+  }
+}
